# MyGlasses

./: README.md  download_data.py  main.py  pyproject.toml  requirements.txt
src/: dataset.py  evaluate.py  export_onnx.py  infer_onnx.py  model.py  preprocess_dataset.py  train.py
