[project]
name = "myglasses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "numpy>=1.26.4",
    "onnxruntime>=1.18.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.3",
]
